# JaemitNex_Direct2D_Defense

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.ps1
assets/: README.md
assets/music/: MUSIC_LICENSE.md
assets/sfx/: KENNEY_AUDIO_LICENSE.md
assets/sprites/kenney_toon_units/: LICENSE_NOTE.md
data/: balance_units.csv
docs/: AI_USAGE.md  BALANCE_TABLES.md  CODE_STRUCTURE_KO.md  GEMINI_NANO_BANANA_SPRITE_PROMPTS.txt  GPT_IMAGE_SPRITE_PROMPTS.txt  REPORT_DRAFT.md  SUBMISSION_CHECKLIST.md
package/DawnlineDefense/: CMakeLists.txt  README.md  build.ps1
package/DawnlineDefense/assets/: README.md
package/DawnlineDefense/assets/backgrounds/: NASA_SOURCES.md
package/DawnlineDefense/assets/music/: MUSIC_LICENSE.md
package/DawnlineDefense/assets/sfx/: KENNEY_AUDIO_LICENSE.md
package/DawnlineDefense/assets/weapons/jaemit_roles/: LICENSE_NOTE.md
package/DawnlineDefense/data/: balance_units.csv
package/DawnlineDefense/docs/: AI_USAGE.md  BALANCE_TABLES.md  GEMINI_NANO_BANANA_SPRITE_PROMPTS.txt  GPT_IMAGE_SPRITE_PROMPTS.txt  REPORT_DRAFT.md  SUBMISSION_CHECKLIST.md
package/DawnlineDefense/src/: GameData.cpp  PawlineGame.cpp  PawlineGame.h  PawlineGameImpl.h  PawlineGameImplCombat.cpp  PawlineGameImplCore.cpp  PawlineGameImplFeedback.cpp  PawlineGameImplInput.cpp  PawlineGameImplLayout.cpp  PawlineGameImplRender.cpp  main.cpp
package/DawnlineDefense/src/framework/: AudioManager.cpp  AudioManager.h  GameFramework.h
package/DawnlineDefense/tools/: generate_quality_assets.py
package/SpaceDefanse/: CMakeLists.txt  README.md  build.ps1
package/SpaceDefanse/assets/: README.md
package/SpaceDefanse/assets/sprites/gameart2d_catdog/: LICENSE_NOTE.md
package/SpaceDefanse/assets/weapons/external_roles/: LICENSE_NOTE.md
package/SpaceDefanse/data/: balance_units.csv
package/SpaceDefanse/docs/: BALANCE_TABLES.md  CODE_STRUCTURE_KO.md  FMOD_RUNTIME_NOTICE.md  QA_BALANCE_PASS.md  REPORT_DRAFT.md  SUBMISSION_CHECKLIST.md
package/SpaceDefanse/src/: SpaceDefanseGameImplCombat.cpp  SpaceDefanseGameImplCore.cpp  SpaceDefanseGameImplInput.cpp  SpaceDefanseGameImplLayout.cpp  SpaceDefanseGameImplRender.cpp  main.cpp
package/SpaceDefanse/src/framework/: AudioManager.cpp  AudioManager.h
package/SpaceDefanse/tools/: generate_quality_assets.py  generate_work_report_pdf.py
package/SpaceDefence/: CMakeLists.txt  README.md  build.ps1
package/SpaceDefence/assets/: README.md
package/SpaceDefence/assets/backgrounds/: NASA_SOURCES.md
package/SpaceDefence/assets/music/: MUSIC_LICENSE.md
package/SpaceDefence/assets/sfx/: KENNEY_AUDIO_LICENSE.md
package/SpaceDefence/assets/weapons/kenney_blaster/: LICENSE_NOTE.md
package/SpaceDefence/docs/: BALANCE_TABLES.md
package/SpaceDefence/shaders/: space_defence_vfx.hlsl
package/SpaceDefence/src/: GameData.h  SpaceDefenceGameImpl.h  SpaceDefenceGameImplCombat.cpp  SpaceDefenceGameImplFeedback.cpp  SpaceDefenceGameImplInput.cpp  main.cpp
package/SpaceDefence/src/framework/: AudioManager.cpp  DeltaTimer.cpp  DeltaTimer.h  SceneManager.cpp
package/SpaceDefence/tools/: generate_work_report_pdf.py
shaders/: pawline_vfx.hlsl  space_defanse_vfx.hlsl
src/: GameData.cpp  GameData.h  PawlineGame.cpp  PawlineGameImpl.h  PawlineGameImplCombat.cpp  PawlineGameImplCore.cpp  PawlineGameImplFeedback.cpp  PawlineGameImplInput.cpp  PawlineGameImplLayout.cpp  PawlineGameImplRender.cpp  SpaceDefanseGame.cpp  SpaceDefanseGame.h  SpaceDefanseGameImpl.h  SpaceDefanseGameImplCombat.cpp  SpaceDefanseGameImplCore.cpp  SpaceDefanseGameImplFeedback.cpp  SpaceDefanseGameImplLayout.cpp  SpaceDefenceGame.cpp  SpaceDefenceGame.h  SpaceDefenceGameImplCore.cpp  SpaceDefenceGameImplLayout.cpp  SpaceDefenceGameImplRender.cpp  main.cpp
src/framework/: AudioManager.cpp  AudioManager.h  GameFramework.cpp  GameFramework.h  SceneManager.h
tools/: generate_quality_assets.py  generate_work_report_pdf.py
